html content, css needs aligning fix

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: rgb(120, 120, 120);
+	background-color: rgb(175,238,238);
 	text-align: center;
 	font-family:'Open Sans',sans-serif;
 }
@@ -15,14 +15,18 @@ p {
 	font-size: 20px;
 }
 div.egeg {
-	background-color: rgba(100, 100, 100, .8);
+	background-color: rgba(100,100,100,.7);
 	height: 200px;
 	width: 300px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: left;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	-o-border-radius: 20px;
+	border-radius: 20px;
 }
 p.egp {
 	font-size: 15px;
-	padding-left: 10px;
+	padding: 10px;
 }
